MODINREACH-337  Update the module to Spring boot v3.0.2 (#314)
* MODINREACH-336 update to java 17

* MODINREACH-336 update to spring boot 3.0.2

* MODINREACH-336 fixing incorrect Error class generation

* MODINREACH-336 fixing issues caused by dependencies update

* MODINREACH-336 fixing issues

* MODINREACH-336 remove commented line

* MODINREACH-336 update artifact version

* MODINREACH-336 fix code smells

* MODINREACH-336 fix more code smells

* MODINREACH-336 fix code smell concerning immediate return

* MODINREACH-336 fix api-schema-lint issue about absent top description

* MODINREACH-336 update folio-spring-base version